--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>hello, world</h1>
-<p>Call me Jim<p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <h1>hello, world</h1>
+    <p>Call me Jim.</p>
+  </body>
+</html>
