--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>A whale of a greeting</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>hello, world</h1>
-    <a href="about.html">About this project</a>
     <p>Call me Jim.</p>
     <img src="images/breaching_whale.jpg" />
   </body>
